[package]
name = "warp-caching"
version = "0.1.0"
authors = ["Tyler Hallada <tyler@hallada.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
http = "0.2"
http-api-problem = { version = "0.17", features = ["with-warp"] }
hyper = "0.13"
lru = "0.5"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
serde = { version = "1.0", features = ["derive"] }
warp = "0.2"
